fragment support added with custom fragment controller host

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="floaty_button_text">Launch Floaty</string>
     <string name="floating_text">I\'m floating</string>
     <string name="bye">Bye!</string>
+    <string name="fl_fragment_a">FL Fragment A\nProcess B</string>
+    <string name="fl_fragment_b">FL Fragment B\nProcess B</string>
 </resources>
